<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity__login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:background="@drawable/bg_login"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pars.company.Activity_Login">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.7"
        android:background="@color/material_light_blue_900"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="22dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_login"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_margin="30dp"
            android:background="@color/white"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/MyEditText">

                            <EditText
                                android:id="@+id/edt_login_email"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/reg_email"
                                android:text="a@a.com"
                                android:inputType="text" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/MyEditText">

                            <EditText
                                android:id="@+id/edt_login_pass"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:hint="@string/password"
                                android:text="1234"
                                android:inputType="textVisiblePassword" />
                        </android.support.design.widget.TextInputLayout>


                        <TextView
                            android:id="@+id/tv_login_forget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:onClick="loginOnClicks"
                            android:paddingTop="5dp"
                            android:text="@string/fotgot_pass"
                            android:textColor="#000" />

                        <TextView
                            android:id="@+id/tv_login_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginTop="5dp"
                            android:onClick="loginOnClicks"
                            android:paddingTop="5dp"
                            android:text="@string/notRegistered"
                            android:textColor="#000" />


                        <Button
                            android:id="@+id/btn_login_main"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="22dp"
                            android:background="@color/material_blue_800"
                            android:text="ورود"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="18sp" />


                        <Button
                            android:id="@+id/btn_loginuser_main"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@color/material_blue_800"
                            android:text=" ورود کاربر"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:visibility="gone"
                            android:textSize="18sp" />
                    </LinearLayout>

                </ScrollView>
            </LinearLayout>


        </RelativeLayout>


        <!--
                <ImageButton
                    android:id="@+id/user_profile_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_below="@+id/login_title"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/user_profile_image_background"
                    android:elevation="4dp"
                    android:src="@mipmap/ic_launcher" />
                    -->


    </RelativeLayout>

</RelativeLayout>
